data/all_generated_tests/raw_wast_tests/call_indirect_MismanagementofBlockNesting_4247.wast
;; 6. **Test Description:**    Use nested block structures with `br_if` instructions alongside `call_indirect` to ensure correct branch conditions inside nested blocks are respected, and correct block exits occur.    - **Constraint Checked:** Branch condition management with nested blocks.    - **Mismanagement Relation:** Double-checks that conditional branching does not lead to incorrect handling of nested blocks.

(assert_invalid
  (module
    (type (func (param i32) (result i32)))
    (type (func (result i32)))
    (table 1 funcref)
    (elem (i32.const 0) 0)
    (func (export "main") (result i32)
      (block $outer
        (block $inner
          (br_if $inner (i32.const 1))
          (call_indirect (type 1) (i32.const 0))
          (i32.const 0)
        )
        (call_indirect (type 0) (i32.const 0))
      )
    )
  )
  "type mismatch"
)